test structure updated

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,29 @@
-cmake_minimum_required(VERSION 3.5)
-project(cash-machine-test)
+cmake_minimum_required(VERSION 3.15)
 
-include_directories(${CMAKE_SOURCE_DIR})
+project(cash-machine-test1)
+project(cash-machine-test2)
+project(cash-machine-test3)
+project(cash-machine-test4)
 
-add_executable(cash-machine-test
-    test.cpp
+include_directories(${CMAKE_SOURCE_DIR}/src)
+
+add_executable(cash-machine-test1
+    test1.cpp
 )
 
-target_link_libraries(cash-machine-test cash-machine)
+add_executable(cash-machine-test2
+    test2.cpp
+)
+
+add_executable(cash-machine-test3
+    test3.cpp
+)
+
+add_executable(cash-machine-test4
+    test4.cpp
+)
+
+target_link_libraries(cash-machine-test1 PRIVATE cash-machine)
+target_link_libraries(cash-machine-test2 PRIVATE cash-machine)
+target_link_libraries(cash-machine-test3 PRIVATE cash-machine)
+target_link_libraries(cash-machine-test4 PRIVATE cash-machine)
