--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,17 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.15)
 
 project(cash-machine LANGUAGES CXX)
 enable_testing()
 
 set(SOURCE_FILES
-    cashmachine.cpp
+    src/cashmachine.cpp
 )
 
 add_subdirectory(test)
 
 add_library(cash-machine ${SOURCE_FILES})
 
-add_test(NAME Test COMMAND $<TARGET_FILE:cash-machine-test>)
+add_test(NAME Test1 COMMAND $<TARGET_FILE:cash-machine-test1>)
+add_test(NAME Test2 COMMAND $<TARGET_FILE:cash-machine-test2>)
+add_test(NAME Test3 COMMAND $<TARGET_FILE:cash-machine-test3>)
+add_test(NAME Test4 COMMAND $<TARGET_FILE:cash-machine-test4>)
